--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "web3-eth-personal": "^1.6.1"
   },
   "devDependencies": {
-    "prettier": "2.8.8",
+    "prettier": "^2.8.8",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
   "scripts": {
