--- a/docker/requester/Dockerfile
+++ b/docker/requester/Dockerfile
@@ -1,7 +1,6 @@
-FROM ebloc/ebloc-broker:latest
-
-# COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
-# COPY supervisord.conf /etc/
+FROM eblocbroker/app:latest
+COPY docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
+COPY supervisord.conf /etc/
 # RUN unlink /var/run/supervisor/supervisor.sock
 
 # ENTRYPOINT ["/tini", "--", "/usr/local/bin/docker-entrypoint.sh"]
