Add minor improvements

--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ context = 19
 exclude = docs/solidity_lexer.py
 follow_imports = silent
 ignore_missing_imports = True
+disable_error_code = annotation-unchecked
 
 [mypy-web3]
 follow_imports = silent
