Re-roganize Dockarfile pull from DockerHub:ebloc/eblocbroker:latest
- Improver convert org to rst for docs

- Create ~/.ipfs using ipfs init if it does not exist

--- a/docker/provider/Dockerfile
+++ b/docker/provider/Dockerfile
@@ -1,1 +1,8 @@
 FROM eblocbroker/app:latest
+WORKDIR /workspace/ebloc-broker
+RUN git fetch --all --quiet >/dev/null 2>&1 \
+ && git pull --all -r -v >/dev/null 2>&1 \
+ && pip install --disable-pip-version-check -e . --use-deprecated=legacy-resolver \
+ && eblocbroker init --base \
+ && eblocbroker >/dev/null 2>&1 \
+ && ./broker/_utils/yaml.py >/dev/null 2>&1
