--- a/broker/ipfs/job_with_data.yaml
+++ b/broker/ipfs/job_with_data.yaml
@@ -1,6 +1,6 @@
 config:
-  requester_address: "0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49"
-  provider_address: "0x3e6ffc5ede9ee6d782303b2dc5f13afeee277aea"
+  requester_address: '0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49'
+  provider_address: '0x3e6ffc5ede9ee6d782303b2dc5f13afeee277aea'
   source_code:
     storage_id: ipfs
     cache_type: public
@@ -13,7 +13,7 @@ config:
       hash: 8f6faf6cfd245cae1b5feb11ae9eb3cf
     data3:
       cache_type: public
-      path: ~/test_eblocbroker/dataset_zip/small/KZ2-tsukuba
+      path: ~/test_eblocbroker/datasets/BL06-camel-sml
       storage_hours: 1
       storage_id: ipfs
   data_transfer_out: 1
