--- a/broker/test_setup/job_cppr.yaml
+++ b/broker/test_setup/job_cppr.yaml
@@ -1,21 +1,21 @@
 config:
-  requester_address: '0x378181ce7b07e8dd749c6f42772574441b20e35f'
-  provider_address: '0x29e613B04125c16db3f3613563bFdd0BA24Cb629'
+  requester_address: '0xc60409093861fe191ae851572a440deb42818a63'
+  provider_address: '0x4934a70ba8c1c3acfa72e809118bdd9048563a24'
   source_code:
-    storage_id: ipfs
+    storage_id: gdrive
     cache_type: public
     path: ~/test_eblocbroker/run_cppr
     storage_hours: 0
   data:
     data1:
-      hash: 4613abc322e8f2fdeae9a5dd10f17540
+      hash: dd0fbccccf7a198681ab838c67b68fbf
     data2:
-      hash: fe801973c5b22ef6861f2ea79dc1eb9c
+      hash: 45281dfec4618e5d20570812dea38760
     data3:
       cache_type: public
-      path: /home/alper/test_eblocbroker/small/BVZ-venus
+      path: /home/alper/test_eblocbroker/small/BVZ-sawtooth
       storage_hours: 1
-      storage_id: ipfs
+      storage_id: gdrive
   data_transfer_out: 5
   jobs:
     job1:
