--- a/docker/provider/slurm.conf
+++ b/docker/provider/slurm.conf
@@ -43,22 +43,22 @@ KillWait=30
 #LaunchType=launch/slurm
 #Licenses=foo*4,bar
 # LOGGING AND ACCOUNTING
-#MailProg=/bin/mail
+MailProg=/var/ebloc-broker/slurm_mail_prog.sh
 #MaxJobCount=10000
 #MaxJobId=67043328
 #MaxMemPerCPU=0
 #MaxStepCount=40000
 #MaxTasksPerNode=512
 #MessageTimeout=10
-MinJobAge=300
+MinJobAge=172800  # 48 h
 MpiDefault=none
 #MpiParams=ports=#-#
 NodeName=c1 NodeHostName=slurmctl NodeAddr=127.0.0.1 RealMemory=1000
 NodeName=c2 NodeAddr=127.0.0.1 RealMemory=1000
-NodeName=c3 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
-NodeName=c4 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
+# NodeName=c3 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
+# NodeName=c4 NodeAddr=127.0.0.1 RealMemory=1000 Gres=gpu:titanxp:1
 #OverTimeLimit=0
-PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
+# PartitionName=debug Nodes=c[3-4] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
 PartitionName=normal Default=yes Nodes=c[1-2] Priority=50 DefMemPerCPU=500 Shared=NO MaxNodes=2 MaxTime=5-00:00:00 DefaultTime=5-00:00:00 State=UP
 # PARTITIONS
 #PluginDir=
@@ -110,7 +110,7 @@ SlurmdTimeout=300
 #SlurmdUser=root
 #SlurmSchedLogFile=
 #SlurmSchedLogLevel=
-SlurmUser=slurm
+SlurmUser=root # was: slurm
 #SrunEpilog=
 #SrunProlog=
 StateSaveLocation=/var/spool/slurmctld
