--- a/docker/provider/slurmdbd.conf
+++ b/docker/provider/slurmdbd.conf
@@ -19,7 +19,7 @@ AuthType=auth/munge
 DbdAddr=localhost
 DbdHost=localhost
 #DbdPort=7031
-SlurmUser=slurm
+SlurmUser=root # was: slurm
 #MessageTimeout=300
 DebugLevel=4
 #DefaultQOS=normal,standby
