--- a/docker/requester/supervisord.conf
+++ b/docker/requester/supervisord.conf
@@ -60,6 +60,20 @@ stderr_logfile_backups=5
 priority=1
 loglevel=trace
 
+[program:ipfsd]
+user=root
+command=/usr/local/bin/ipfs daemon --migrate --enable-gc
+autostart=false
+autorestart=false
+exitcodes=0,1,2
+stdout_logfile=/var/log/supervisor/ipfsd.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/ipfsd.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+priority=10
+
 [program:mysqld]
 command=/usr/bin/pidproxy /var/run/mariadb/mariadb.pid /usr/bin/mysqld_safe
 stdout_logfile=/var/log/supervisor/mysqld.log
