--- a/docker/provider/supervisord.conf
+++ b/docker/provider/supervisord.conf
@@ -73,6 +73,20 @@ autostart=false
 autorestart=false
 priority=2
 
+[program:ipfsd]
+user=root
+command=/usr/local/bin/ipfs daemon --migrate --enable-gc
+autostart=false
+autorestart=false
+exitcodes=0,1,2
+stdout_logfile=/var/log/supervisor/ipfsd.log
+stdout_logfile_maxbytes=1MB
+stdout_logfile_backups=5
+stderr_logfile=/var/log/supervisor/ipfsd.log
+stderr_logfile_maxbytes=1MB
+stderr_logfile_backups=5
+priority=10
+
 [program:slurmdbd]
 user=root
 #command=/bin/bash -c "until echo 'SELECT 1' | mysql -h localhost -uslurm -ppassword &> /dev/null; do echo 'Waiting for DB'; sleep 1; done && /usr/sbin/slurmdbd -Dvvv"
