--- a/broker/ipfs/job_sleep.yaml
+++ b/broker/ipfs/job_sleep.yaml
@@ -1,10 +1,10 @@
 config:
   requester_address: ''
-  provider_address: '0x08b003717bfab7a80b17b51c32223460fe9efe2a'
+  provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: /workspace/ebloc-broker/.test_eblocbroker/source_code_without_data/
+    path: ~/ebloc-broker/.test_eblocbroker/source_code_without_data
     storage_hours: 0
     storage_id: ipfs
   data_transfer_out: 1
