--- a/requirements.txt
+++ b/requirements.txt
@@ -296,7 +296,7 @@ filelock==3.11.0
     # via
     #   tox
     #   virtualenv
-flake8==6.0.0
+flake8>=5.0.0,<=6.0.0
     # via
     #   flake8-mypy
     #   flake8-noqa
