Add minor improvements

--- a/broker/_slurm/confs/slurm.conf
+++ b/broker/_slurm/confs/slurm.conf
@@ -150,14 +150,11 @@ PartitionName=debug Default=yes Nodes=leopar[1-4]
 # --------------------------------------------------------------------------------------------------
 
 # single core --------------------------------------------------------------------------------------
-# NodeName=leopar CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
-# PartitionName=debug Default=yes Nodes=leopar
+NodeName=kama CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
+PartitionName=debug Default=yes Nodes=kama
 # --------------------------------------------------------------------------------------------------
 
-
 # below old
-# NodeName=leopar CPUs=1 Boards=1 SocketsPerBoard=1 CoresPerSocket=1 ThreadsPerCore=1 RealMemory=976
-
 # NodeName=leopar CPUs=4 Boards=1 SocketsPerBoard=2 CoresPerSocket=2 ThreadsPerCore=1 RealMemory=1982 NodeHostName=localhost
 # PartitionName=debug Default=yes Nodes=leopar
 
