--- a/broker/_test/job_configs/job.yaml
+++ b/broker/_test/job_configs/job.yaml
@@ -14,8 +14,8 @@ config:
       storage_id: ipfs
   data_transfer_out: 1
   jobs:
-    job1:
+    job0:
       cores: 1
       run_time: 1
   provider:
-    address: '0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49'
+    address: "0xD118b6EF83ccF11b34331F1E7285542dDf70Bc49"
