--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -1,6 +1,6 @@
 config:
   # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
-  provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
+  provider_address: "0x29e613b04125c16db3f3613563bfdd0ba24cb629"
   search_cheapest_provider: false
   source_code:
     cache_type: public
@@ -9,6 +9,9 @@ config:
     storage_id: ipfs
   data_transfer_out: 1
   jobs:
+    job0:
+      cores: 1
+      run_time: 1
     job1:
       cores: 1
       run_time: 1
@@ -16,5 +19,8 @@ config:
       cores: 1
       run_time: 1
     job3:
+      cores: 1
+      run_time: 1
+    job4:
       cores: 1
       run_time: 1
