--- a/requirements.txt
+++ b/requirements.txt
@@ -1210,6 +1210,7 @@ sphinx-autobuild==2021.3.14
 watchdog==3.0.0
 pydot==1.4.2
 Pyomo==6.6.1
+heft==0.1.1
 # gdown==4.7.1
     # via
     #   gshell
