--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -7,20 +7,13 @@ config:
     path: ~/test_eblocbroker/test_data/base/source_code_wf
     storage_hours: 0
     storage_id: ipfs
-  data_transfer_out: 1
+  dt_in: 389 ##
+  data_transfer_out: 124 # sum of output weights
   jobs:
-    job0:
-      cores: 1
-      run_time: 1
     job1:
       cores: 1
-      run_time: 1
-    job2:
-      cores: 1
-      run_time: 1
-    job3:
-      cores: 1
-      run_time: 1
-    job4:
-      cores: 1
-      run_time: 1
+      run_time: 25
+  costs:
+    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 2590200
+    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 2590200
+    '0xE2e146d6B456760150d78819af7d276a1223A6d4': 2590200
