--- a/broker/test_setup_w/job_workflow.yaml
+++ b/broker/test_setup_w/job_workflow.yaml
@@ -1,15 +1,18 @@
 config:
   # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
-  provider_address: '0xe2e146d6B456760150d78819af7d276a1223A6d4'
+  provider_address: '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24'
   search_cheapest_provider: false
   source_code:
     cache_type: public
     path: ~/test_eblocbroker/test_data/base/source_code_wf_random
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 200 ##
-  data_transfer_out: 34  # sum of output weights
+  dt_in: 350 ##
+  data_transfer_out: 250 # sum of output weights
   jobs:
-    job6:
+    job5:
       cores: 1
-      run_time: 18
+      run_time: 26
+    job3:
+      cores: 1
+      run_time: 25
