Implement submission for TGL algorithm

--- a/setup.cfg
+++ b/setup.cfg
@@ -11,7 +11,7 @@ force_grid_wrap = 0
 include_trailing_comma = True
 known_standard_library = tkinter
 known_first_party = brownie
-known_third_party = PySimpleGUI,Tkinter,argcomplete,atomicwrites,base58,cid,config,consoledraw,daemon,daemons,eblocbroker,filelock,flask,gdown,git,halo,hexbytes,ipdb,ipfshttpclient,matplotlib,multihash,networkx,owncloud,psutil,pygments,pymongo,pypandoc,pytest,pytz,quart,requests,rich,ruamel,setuptools,vulcano,web3,zc
+known_third_party = PySimpleGUI,Tkinter,argcomplete,atomicwrites,base58,cid,config,consoledraw,daemon,daemons,eblocbroker,filelock,flask,gdown,git,halo,heft,hexbytes,ipdb,ipfshttpclient,matplotlib,multihash,networkx,owncloud,psutil,pygments,pymongo,pypandoc,pytest,pytz,quart,requests,rich,ruamel,setuptools,vulcano,web3,zc
 line_length = 120
 multi_line_output = 3
 use_parentheses = True
