--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -1,15 +1,19 @@
 config:
-  # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
-  provider_address: '0x29e613b04125c16db3f3613563bfdd0ba24cb629'
+  requester_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
+  provider_address: '0x29e613B04125c16db3f3613563bFdd0BA24Cb629'
   search_cheapest_provider: false
   source_code:
     cache_type: public
     path: ~/test_eblocbroker/test_data/base/source_code_wf_random
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 200 ##
-  data_transfer_out: 34 # sum of output weights
+  dt_in: 226 ##
+  data_transfer_out: 250 # sum of output weights
   jobs:
     job1:
       cores: 1
-      run_time: 18
+      run_time: 25
+  costs:
+    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 2819498
+    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 2570200
+    '0xe2e146d6B456760150d78819af7d276a1223A6d4': 2559240
