--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -1,19 +1,22 @@
 config:
   requester_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
-  provider_address: '0x29e613B04125c16db3f3613563bFdd0BA24Cb629'
+  provider_address: '0xe2e146d6B456760150d78819af7d276a1223A6d4'
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: ~/test_eblocbroker/test_data/base/source_code_wf_random
+    path: /home/alper/test_eblocbroker/workflow/40_40
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 305 ##
-  data_transfer_out: 250  # sum of output weights
+  dt_in: 202 ##
+  data_transfer_out: 22  # sum of output weights
   jobs:
     job1:
       cores: 1
       run_time: 4
+    job2:
+      cores: 1
+      run_time: 3
   costs:
-    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 525140
-    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 486000
-    '0xe2e146d6B456760150d78819af7d276a1223A6d4': 499200
+    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 812174
+    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 742600
+    '0xe2e146d6B456760150d78819af7d276a1223A6d4': 744120
