--- a/broker/test_setup_w/job_workflow.yaml
+++ b/broker/test_setup_w/job_workflow.yaml
@@ -4,12 +4,60 @@ config:
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: /home/alper/test_eblocbroker/workflow/80_80
+    path: /home/alper/test_eblocbroker/workflow/100_125
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 296 ##
-  data_transfer_out: 0    # sum of output weights
+  dt_in: 200 ##
+  data_transfer_out: 675  # sum of output weights
   jobs:
-    job67:
+    job33:
+      cores: 1
+      run_time: 5
+    job84:
+      cores: 1
+      run_time: 5
+    job81:
+      cores: 1
+      run_time: 5
+    job63:
       cores: 1
       run_time: 3
+    job2:
+      cores: 1
+      run_time: 3
+    job21:
+      cores: 1
+      run_time: 5
+    job16:
+      cores: 1
+      run_time: 2
+    job57:
+      cores: 1
+      run_time: 4
+    job73:
+      cores: 1
+      run_time: 4
+    job19:
+      cores: 1
+      run_time: 4
+    job68:
+      cores: 1
+      run_time: 2
+    job50:
+      cores: 1
+      run_time: 2
+    job40:
+      cores: 1
+      run_time: 2
+    job88:
+      cores: 1
+      run_time: 4
+    job37:
+      cores: 1
+      run_time: 5
+    job72:
+      cores: 1
+      run_time: 2
+    job91:
+      cores: 1
+      run_time: 2
