--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -4,19 +4,28 @@ config:
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: /home/alper/test_eblocbroker/workflow/80_80
+    path: /home/alper/test_eblocbroker/workflow/20_25
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 202  ##
-  data_transfer_out: 64   # sum of output weights
+  dt_in: 509  ##
+  data_transfer_out: 197  # sum of output weights
   jobs:
     job1:
       cores: 1
-      run_time: 5
+      run_time: 4
     job2:
       cores: 1
-      run_time: 4
+      run_time: 2
+    job3:
+      cores: 1
+      run_time: 3
+    job4:
+      cores: 1
+      run_time: 5
+    job5:
+      cores: 1
+      run_time: 5
   costs:
-    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 1036332
-    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 946800
-    '0xe2e146d6B456760150d78819af7d276a1223A6d4': 947160
+    '0x29e613B04125c16db3f3613563bFdd0BA24Cb629': 722271
+    '0x4934a70Ba8c1C3aCFA72E809118BDd9048563A24': 662900
+    '0xe2e146d6B456760150d78819af7d276a1223A6d4': 669480
