--- a/broker/ipfs/job_workflow.yaml
+++ b/broker/ipfs/job_workflow.yaml
@@ -4,13 +4,16 @@ config:
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: /home/alper/test_eblocbroker/workflow/8_14
+    path: /home/alper/test_eblocbroker/workflow/32_56
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 200  ##
-  data_transfer_out: 46   # sum of output weights
+  dt_in: 0    ##
+  data_transfer_out: 451  # sum of output weights
   jobs:
     job1:
+      cores: 1
+      run_time: 3
+    job2:
       cores: 1
       run_time: 4
   costs:
