--- a/broker/test_setup_w/job_workflow.yaml
+++ b/broker/test_setup_w/job_workflow.yaml
@@ -4,13 +4,16 @@ config:
   search_cheapest_provider: false
   source_code:
     cache_type: public
-    path: /home/alper/test_eblocbroker/workflow/64_112
+    path: /home/alper/test_eblocbroker/workflow/256_448
     storage_hours: 0
     storage_id: ipfs
-  dt_in: 122  ##
-  data_transfer_out: 0    # sum of output weights
+  dt_in: 94   ##
+  data_transfer_out: 250  # sum of output weights
   jobs:
-    job22:
+    job154:
       cores: 1
-      run_time: 5
+      run_time: 2
+    job179:
+      cores: 1
+      run_time: 4
   dt_out: {}
