--- a/broker/ipfs/job_without_data.yaml
+++ b/broker/ipfs/job_without_data.yaml
@@ -1,6 +1,6 @@
 config:
-  # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
-  provider_address: "0x29e613b04125c16db3f3613563bfdd0ba24cb629"
+    # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
+  provider_address: '0x72c1a89ff3606aa29686ba8d29e28dccff06430a'
   search_cheapest_provider: false
   source_code:
     cache_type: public
@@ -12,3 +12,4 @@ config:
     job0:
       cores: 1
       run_time: 1
+  dt_in: {}
