--- a/broker/test_setup_w/job_workflow.yaml
+++ b/broker/test_setup_w/job_workflow.yaml
@@ -1,19 +1,20 @@
 config:
-  # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
-  provider_address: '0x29e613B04125c16db3f3613563bFdd0BA24Cb629'
-  search_cheapest_provider: false
-  source_code:
-    cache_type: public
-    path: /home/alper/test_eblocbroker/workflow/256_448
-    storage_hours: 0
-    storage_id: ipfs
-  dt_in: 94   ##
-  data_transfer_out: 250  # sum of output weights
-  jobs:
-    job154:
-      cores: 1
-      run_time: 2
-    job179:
-      cores: 1
-      run_time: 4
-  dt_out: {}
+    # requester_address: "0x0636278CBD420368b1238ab204b1073df9cC1c5c"
+    provider_address: "0x29e613B04125c16db3f3613563bFdd0BA24Cb629"
+    search_cheapest_provider: false
+    source_code:
+        cache_type: public
+        path: /home/alper/test_eblocbroker/test_data/base/source_code_wf_random
+        # path: /home/alper/test_eblocbroker/workflow/256_448
+        storage_hours: 0
+        storage_id: ipfs
+    dt_in: 94 ##
+    data_transfer_out: 250 # sum of output weights
+    jobs:
+        job154:
+            cores: 1
+            run_time: 2
+        job179:
+            cores: 1
+            run_time: 4
+    dt_out: {}
