--- a/requirements.txt
+++ b/requirements.txt
@@ -376,17 +376,16 @@ iniconfig==1.1.1
     # via
     #   eth-brownie
     #   pytest
-install==1.3.5
 ipdb==0.13.13
 ipfshttpclient @ https://github.com/avatar-lavventura/py-ipfs-http-client/archive/refs/heads/master.zip
     # via
     #   eth-brownie
     #   web3
-ipython==8.7.0
+ipython==7.34.0
     # via
     #   ipdb
 ipython-genutils==0.2.0
-isort==5.12.0
+isort==6.0.0b2
     # via
     #   pylint
 itsdangerous==2.1.2
@@ -505,13 +504,13 @@ netaddr==0.8.0
     # via
     #   eth-brownie
     #   multiaddr
-networkx==3.1
+networkx==2.6.3
 neurotools==0.3.1
 ng==1.2.0
 nodeenv==1.6.0
     # via
     #   pre-commit
-numpy==1.23.5
+numpy==1.21.6
     # via
     #   imageio
     #   matplotlib
@@ -583,7 +582,7 @@ pluggy==1.0.0
     #   python-lsp-server
     #   tox
 ppi==0.0.4
-pre-commit==3.2.1
+pre-commit==2.21.0
 prompt-toolkit==3.0.31
     # via
     #   eth-brownie
@@ -700,7 +699,7 @@ pyrsistent==0.18.1
     #   eth-brownie
     #   jsonschema
 pyserial==3.4
-pysimplegui==4.33.0
+pysimplegui==5.0.6
 pysocks==1.7.1
     # via
     #   requests
@@ -878,7 +877,7 @@ sortedcontainers==2.4.0
 soupsieve==2.2.1
     # via
     #   beautifulsoup4
-Sphinx==7.0.1
+Sphinx==5.3.0
     # via
     #   sphinx-autobuild
     #   sphinx-rtd-theme
